# xorq-template-sklearn

./: .envrc  .gitignore.template  README.md  expr.py  pyproject.toml  requirements.txt  with-uvenv
src/xorq_template_sklearn/: __init__.py
