[project]
name = "xorq-template-sklearn"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "pins[gcs]>=0.9.0",
    "scikit-learn>=1.7.0",
    "xorq[duckdb]>=0.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=8.37.0",
]

[tool.uv.sources]
xorq = { git = "https://github.com/xorq-labs/xorq" }
